--- a/index.html
+++ b/index.html
@@ -1,1 +1,21 @@
-<!DOCTYPE html><html><head><meta charset=utf-8><meta name=viewport content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no,minimal-ui"><link rel=stylesheet href=/static/css/main.css><title>人民金服</title><link href=./static/css/app.1c7f36576c62092baaaaf58633c7b1fb.css rel=stylesheet></head><body><div id=app><router-view></router-view></div><script src=/static/js/polyfill.js type=text/javascript></script><script src=/static/js/flex.js type=text/javascript></script><script src=/static/js/axios.min.js type=text/javascript></script><script type=text/javascript src=./static/js/manifest.f523bdff3d6df377ab6b.js></script><script type=text/javascript src=./static/js/vendor.a7414becdba2e343bb25.js></script><script type=text/javascript src=./static/js/app.0df0e0d7b0523b66beae.js></script></body></html>
+<!DOCTYPE html>
+<html>
+	<head>
+		<meta charset=utf-8>
+		<meta name=viewport content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no,minimal-ui">
+		<link rel=stylesheet href=static/css/main.css>
+		<title>人民金服</title>
+		<link href=static/css/app.1c7f36576c62092baaaaf58633c7b1fb.css rel=stylesheet>
+	</head>
+	<body>
+		<div id=app>
+			<router-view></router-view>
+		</div>
+		<script src=static/js/polyfill.js type=text/javascript></script>
+		<script src=static/js/flex.js type=text/javascript></script>
+		<script src=/static/js/axios.min.js type=text/javascript></script>
+		<script type=text/javascript src=static/js/manifest.f523bdff3d6df377ab6b.js></script>
+		<script type=text/javascript src=static/js/vendor.a7414becdba2e343bb25.js></script>
+		<script type=text/javascript src=static/js/app.0df0e0d7b0523b66beae.js></script>
+	</body>
+</html>
