--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 		</div>
 		<script src=static/js/polyfill.js type=text/javascript></script>
 		<script src=static/js/flex.js type=text/javascript></script>
-		<script src=/static/js/axios.min.js type=text/javascript></script>
+		<script src=static/js/axios.min.js type=text/javascript></script>
 		<script type=text/javascript src=static/js/manifest.f523bdff3d6df377ab6b.js></script>
 		<script type=text/javascript src=static/js/vendor.a7414becdba2e343bb25.js></script>
 		<script type=text/javascript src=static/js/app.0df0e0d7b0523b66beae.js></script>
